...
      type: "pier",
      isIsland: false,
      district: "離島",
      radiusMeters: 50),
  HkFishingSpotSeed(
      id: "P021",
      nameZh: "青衣公眾碼頭",
      nameEn: "青衣公眾碼頭",
      type: "pier",
      isIsland: false,
      district: "葵青",
      radiusMeters: 50),
  HkFishingSpotSeed(
...
